--- a/css/style.css
+++ b/css/style.css
@@ -730,6 +730,10 @@
 }
 
 @media(max-width:480px) {
+  .container{
+    display: flex;
+    flex-direction: column;
+  }
   .container header nav {
     width: 480px;
     padding: 20px 20px;
@@ -753,7 +757,7 @@
   }
 
   .container header section .cards {
-    width: 450px;
+    width: 480px;
     height: 490px;
     text-align: center;
   }
@@ -790,6 +794,7 @@
   }
 
   .container footer nav {
+    width: 480px;
     margin-top:1800px;
     height: 1150px;
     padding: 1000px 0px 0px 0px;
@@ -797,7 +802,7 @@
   }
 
   .container footer nav .cards {
-    width: 470px;
+    width: 480px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -805,18 +810,18 @@
     margin-bottom: 500px;
   }
   .container footer nav .cards .card-two{
-    width:450px;
+    width:480px;
     padding:0px 0px 0px 0px;
   }
   .container footer nav .cards .card-two .card{
-    width: 450px;
+    width: 480px;
     padding:0px 0px 0px 0px;
   }
   .container footer nav .cards .card-two .card .card-three input{
-    width: 450px;
+    width: 480px;
   }
   .container footer nav .cards .card-two .card #card-four input{
-    width: 450px;
+    width: 480px;
   }
 
   .container footer nav .cards .cards100 img {
@@ -825,7 +830,7 @@
   }
 
   .container footer nav .cards-two {
-    width: 450px;
+    width: 480px;
     height: 1000px;
     display: flex;
     flex-direction: column;
@@ -851,7 +856,7 @@
     justify-content: center;
   }
   .container footer nav .cards-two .card .card-three {
-    width:450px;
+    width:480px;
     text-align: center;
     display: flex;
     flex-direction: column;
