--- a/css/style.css
+++ b/css/style.css
@@ -632,8 +632,11 @@
 
 @media (max-width: 480px) {
   .container header nav {
-    gap: 100px;
+    width: 100%;
     padding: 0px 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
   .container header nav ul {
     display: none;
@@ -645,6 +648,11 @@
   }
   .container header section .cards {
     width: 480px;
+  }
+  .container main .big-card {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
   .container main .big-card .card-one .suz:hover {
     margin-top: 0px;
