--- a/sass/style.scss
+++ b/sass/style.scss
@@ -745,43 +745,46 @@
             }
 
             section {
-                width: 480px;
+                width: 100%;
                 padding: 0px 0px;
                 background-image: none;
                 height: 460px;
                 display: flex;
-                align-items:baseline;
-                justify-content:center;
+                align-items: baseline;
 
                 .cards {
                     width: 420px;
-                    height:400px;
-                    padding:50px 50px;
+                    height: 400px;
+                    padding: 50px 50px;
 
                     .card-one {
-                        .h1{
-                            font-size:15px;
+                        .h1 {
+                            font-size: 15px;
                         }
-                        h1{
-                            font-size:30px;
-                            line-height:35px;
+
+                        h1 {
+                            font-size: 30px;
+                            line-height: 35px;
                         }
-                        p{
-                            font-size:15px;
-                            line-height:20px;
+
+                        p {
+                            font-size: 15px;
+                            line-height: 20px;
                         }
                     }
-                    .card-two{
-                        .button{
-                            button{
-                                width:130px;
-                                font-size:15px;
+
+                    .card-two {
+                        .button {
+                            button {
+                                width: 130px;
+                                font-size: 15px;
                             }
                         }
-                        .raqam{
-                            h1{
-                                width:130px;
-                                font-size:15px;
+
+                        .raqam {
+                            h1 {
+                                width: 130px;
+                                font-size: 15px;
                             }
                         }
                     }
@@ -794,9 +797,18 @@
                 width: 480px;
                 display: flex;
                 flex-direction: column;
-                margin-top:-50px;
+                align-items: baseline;
+                justify-content: center;
+                margin-top: 500px;
+                padding: 0px 0px;
+                margin-bottom: -570px;
 
                 .card-one {
+                    width: 100%;
+                    padding: 0px 80px 0px 0px;
+                    display: flex;
+                    align-items: center;
+
                     .suz {
                         &:hover {
                             margin-top: 0px;
