--- a/sass/style.scss
+++ b/sass/style.scss
@@ -753,9 +753,9 @@
                 align-items: baseline;
 
                 .cards {
-                    width: 420px;
-                    height: 400px;
-                    padding: 50px 50px;
+                    width:100%;
+                    height:330px;
+                    padding: 30px 30px;
 
                     .card-one {
                         .h1 {
