--- a/css/style.css
+++ b/css/style.css
@@ -651,7 +651,7 @@
   }
   .container header section .cards {
     width: 100%;
-    height: 330px;
+    height: 400px;
     padding: 30px 30px;
   }
   .container header section .cards .card-one .h1 {
@@ -674,7 +674,7 @@
     font-size: 15px;
   }
   .container main .big-card {
-    width: 480px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: baseline;
@@ -706,15 +706,26 @@
     gap: 100px;
   }
   .container main .big-card .card-two .card {
+    width: 100%;
     height: 480px;
   }
+  .container main .big-card .card-three {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
   .container main section {
+    width: 100%;
     margin-top: 1180px;
   }
   .container main section .cards {
-    width: 480px;
+    width: 100%;
     flex-direction: column;
     gap: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .container footer .cards50 {
     display: none;
