--- a/sass/style.scss
+++ b/sass/style.scss
@@ -753,8 +753,8 @@
                 align-items: baseline;
 
                 .cards {
-                    width:100%;
-                    height:330px;
+                    width: 100%;
+                    height: 400px;
                     padding: 30px 30px;
 
                     .card-one {
@@ -794,7 +794,7 @@
 
         main {
             .big-card {
-                width: 480px;
+                width: 100%;
                 display: flex;
                 flex-direction: column;
                 align-items: baseline;
@@ -832,18 +832,30 @@
                     gap: 100px;
 
                     .card {
+                        width: 100%;
                         height: 480px;
                     }
+                }
+
+                .card-three {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 100%;
                 }
             }
 
             section {
+                width: 100%;
                 margin-top: 1180px;
 
                 .cards {
-                    width: 480px;
+                    width:100%;
                     flex-direction: column;
                     gap: 40px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
             }
         }
