--- a/css/style.css
+++ b/css/style.css
@@ -674,20 +674,27 @@
     font-size: 15px;
   }
   .container main .big-card {
-    width: 100%;
+    width: 480px;
     display: flex;
     flex-direction: column;
     align-items: baseline;
     justify-content: center;
     margin-top: 500px;
-    padding: 0px 0px;
     margin-bottom: -570px;
   }
   .container main .big-card .card-one {
     width: 100%;
-    padding: 0px 80px 0px 0px;
     display: flex;
+    align-items: baseline;
+    justify-content: baseline;
+  }
+  .container main .big-card .card-one .suz {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: baseline;
+    text-align: center;
   }
   .container main .big-card .card-one .suz:hover {
     margin-top: 0px;
@@ -711,12 +718,12 @@
   }
   .container main .big-card .card-three {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: baseline;
+    justify-content: baseline;
     width: 100%;
   }
   .container main section {
-    width: 100%;
+    width: 480px;
     margin-top: 1180px;
   }
   .container main section .cards {
