--- a/sass/style.scss
+++ b/sass/style.scss
@@ -794,22 +794,27 @@
 
         main {
             .big-card {
-                width: 100%;
+                width:480px;
                 display: flex;
                 flex-direction: column;
                 align-items: baseline;
                 justify-content: center;
                 margin-top: 500px;
-                padding: 0px 0px;
                 margin-bottom: -570px;
 
                 .card-one {
                     width: 100%;
-                    padding: 0px 80px 0px 0px;
                     display: flex;
-                    align-items: center;
+                    align-items:baseline;
+                    justify-content:baseline;
 
                     .suz {
+                        width:100%;
+                        display: flex;
+                        flex-direction: column;
+                        align-items:center;
+                        justify-content:baseline;
+                        text-align:center;
                         &:hover {
                             margin-top: 0px;
                             transform: none;
@@ -832,21 +837,21 @@
                     gap: 100px;
 
                     .card {
-                        width: 100%;
+                        width:100%;
                         height: 480px;
                     }
                 }
 
                 .card-three {
                     display: flex;
-                    align-items: center;
-                    justify-content: center;
+                    align-items:baseline;
+                    justify-content:baseline;
                     width: 100%;
                 }
             }
 
             section {
-                width: 100%;
+                width: 480px;
                 margin-top: 1180px;
 
                 .cards {
