--- a/sass/style.scss
+++ b/sass/style.scss
@@ -854,6 +854,9 @@
             section {
                 width: 480px;
                 margin-top: 1180px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
                 .cards {
                     width: 100%;
@@ -898,6 +901,7 @@
 
                         img {
                             width: 480px;
+                            border-radius:0px 0px 0px 0px;
                         }
                     }
 
@@ -908,6 +912,7 @@
                         flex-direction: column;
                         align-items: center;
                         justify-content: center;
+                        border-radius:0px 0px 0px 0px;
 
                         .card {
                             padding: 0px 0px;
