--- a/css/style.css
+++ b/css/style.css
@@ -631,9 +631,21 @@
 }
 
 @media (max-width: 480px) {
+  .container {
+    width: 100%;
+    padding: 0px 0px;
+  }
+  .container header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 0px;
+  }
   .container header nav {
     width: 100%;
-    padding: 0px 25px;
+    padding: 0px 0px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -645,9 +657,10 @@
     width: 100%;
     padding: 0px 0px;
     background-image: none;
-    height: 460px;
+    height: 470px;
     display: flex;
-    align-items: baseline;
+    align-items: center;
+    justify-content: center;
   }
   .container header section .cards {
     width: 100%;
@@ -674,7 +687,7 @@
     font-size: 15px;
   }
   .container main .big-card {
-    width: 480px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: baseline;
@@ -723,7 +736,7 @@
     width: 100%;
   }
   .container main section {
-    width: 480px;
+    width: 100%;
     margin-top: 1180px;
     display: flex;
     align-items: center;
@@ -744,32 +757,38 @@
     background-image: none;
   }
   .container footer nav {
-    margin-top: 500px;
+    margin-top: 600px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 1800px;
-    padding: 0px 0px;
-    width: 480px;
+    height: 1850px;
+    padding: 15px 0px;
+    width: 100%;
+    background-color: black;
+    gap: 100px;
   }
   .container footer nav .cards {
-    width: 480px;
+    width: 100%;
     flex-direction: column;
-    margin-top: -830px;
+    margin-top: -1050px;
     height: 1560px;
+    transition: 2s;
+  }
+  .container footer nav .cards:hover {
+    transform: scale(102%);
   }
   .container footer nav .cards .cards100 {
-    width: 480px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
   }
   .container footer nav .cards .cards100 img {
-    width: 480px;
+    width: 100%;
     border-radius: 0px 0px 0px 0px;
   }
   .container footer nav .cards .card-two {
-    width: 480px;
+    width: 100%;
     padding: 0px 0px;
     display: flex;
     flex-direction: column;
@@ -791,7 +810,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 480px;
+    width: 100%;
+    padding: 0px 0px;
+    background-color: black;
   }
   .container footer nav .cards-two .card {
     display: flex;
@@ -803,7 +824,7 @@
     gap: 30px;
   }
   .container footer nav .cards-two .card .card-one {
-    width: 480px;
+    width: 100%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -811,7 +832,7 @@
     justify-content: center;
   }
   .container footer nav .cards-two .card .card-two {
-    width: 480px;
+    width: 100%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -819,18 +840,26 @@
     justify-content: center;
   }
   .container footer nav .cards-two .card .card-three {
-    width: 480px;
+    width: 100%;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
+  .container footer nav .cards-two .card .card-three ul #li {
+    color: white;
+    text-decoration: none;
+    list-style: none;
+  }
   .container footer nav .cards-two .card-100 {
     flex-direction: column;
-    gap: 1px;
+    margin-bottom: 50px;
+    height: 200px;
+    align-items: center;
+    justify-content: center;
   }
   .container footer nav .cards-two .card-100 .card20 {
-    height: 5px;
+    height: 15px;
   }
 }/*# sourceMappingURL=style.css.map */
