--- a/sass/style.scss
+++ b/sass/style.scss
@@ -731,10 +731,18 @@
 
 @media(max-width:480px) {
     .container {
+        width: 100%;
+        padding:0px 0px;
         header {
+            width:100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding:0px 0px;
             nav {
                 width: 100%;
-                padding: 0px 25px;
+                padding: 0px 0px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -748,9 +756,10 @@
                 width: 100%;
                 padding: 0px 0px;
                 background-image: none;
-                height: 460px;
+                height: 470px;
                 display: flex;
-                align-items: baseline;
+                align-items:center;
+                justify-content: center;
 
                 .cards {
                     width: 100%;
@@ -794,7 +803,7 @@
 
         main {
             .big-card {
-                width: 480px;
+                width:100%;
                 display: flex;
                 flex-direction: column;
                 align-items: baseline;
@@ -852,7 +861,7 @@
             }
 
             section {
-                width: 480px;
+                width:100%;
                 margin-top: 1180px;
                 display: flex;
                 align-items: center;
@@ -879,34 +888,40 @@
             }
 
             nav {
-                margin-top: 500px;
+                margin-top:600px;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                height: 1800px;
-                padding: 0px 0px;
-                width: 480px;
+                height: 1850px;
+                padding:15px 0px;
+                width:100%;
+                background-color:black;
+                gap:100px;
 
                 .cards {
-                    width: 480px;
+                    width:100%;
                     flex-direction: column;
-                    margin-top: -830px;
+                    margin-top: -1050px;
                     height: 1560px;
+                    transition:2s;
+                    &:hover{
+                        transform:scale(102%);
+                    }
 
                     .cards100 {
-                        width: 480px;
+                        width:100%;
                         display: flex;
                         align-items: center;
                         justify-content: center;
 
                         img {
-                            width: 480px;
+                            width:100%;
                             border-radius: 0px 0px 0px 0px;
                         }
                     }
 
                     .card-two {
-                        width: 480px;
+                        width:100%;
                         padding: 0px 0px;
                         display: flex;
                         flex-direction: column;
@@ -937,7 +952,9 @@
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
-                    width: 480px;
+                    width:100%;
+                    padding:0px 0px;
+                    background-color:black;
 
                     .card {
                         display: flex;
@@ -949,7 +966,7 @@
                         gap: 30px;
 
                         .card-one {
-                            width: 480px;
+                            width:100%;
                             text-align: center;
                             display: flex;
                             flex-direction: column;
@@ -958,7 +975,7 @@
                         }
 
                         .card-two {
-                            width: 480px;
+                            width:100%;
                             text-align: center;
                             display: flex;
                             flex-direction: column;
@@ -967,21 +984,31 @@
                         }
 
                         .card-three {
-                            width: 480px;
+                            width:100%;
                             text-align: center;
                             display: flex;
                             flex-direction: column;
                             align-items: center;
                             justify-content: center;
+                            ul{
+                                #li{
+                                    color:white;
+                                    text-decoration: none;
+                                    list-style: none;
+                                }
+                            }
                         }
                     }
 
                     .card-100 {
                         flex-direction: column;
-                        gap: 1px;
+                        margin-bottom:50px;
+                        height:200px;
+                        align-items: center;
+                        justify-content: center;
 
                         .card20 {
-                            height: 5px;
+                            height:15px;
                         }
                     }
                 }
