--- a/css/style.css
+++ b/css/style.css
@@ -631,12 +631,8 @@
 }
 
 @media (max-width: 480px) {
-  .container {
-    width: 100%;
-    padding: 0px 0px;
-  }
   .container header {
-    width: 100%;
+    width: 480px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -644,8 +640,8 @@
     padding: 0px 0px;
   }
   .container header nav {
-    width: 100%;
-    padding: 0px 0px;
+    width: 480px;
+    padding: 0px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -654,7 +650,7 @@
     display: none;
   }
   .container header section {
-    width: 100%;
+    width: 480px;
     padding: 0px 0px;
     background-image: none;
     height: 470px;
@@ -663,7 +659,7 @@
     justify-content: center;
   }
   .container header section .cards {
-    width: 100%;
+    width: 480px;
     height: 400px;
     padding: 30px 30px;
   }
@@ -687,7 +683,7 @@
     font-size: 15px;
   }
   .container main .big-card {
-    width: 100%;
+    width: 480px;
     display: flex;
     flex-direction: column;
     align-items: baseline;
@@ -696,13 +692,13 @@
     margin-bottom: -570px;
   }
   .container main .big-card .card-one {
-    width: 100%;
+    width: 480px;
     display: flex;
     align-items: baseline;
     justify-content: baseline;
   }
   .container main .big-card .card-one .suz {
-    width: 100%;
+    width: 480px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -722,28 +718,29 @@
     text-shadow: none;
   }
   .container main .big-card .card-two {
+    width: 480px;
     flex-direction: column;
     gap: 100px;
   }
   .container main .big-card .card-two .card {
-    width: 100%;
+    width: 480px;
     height: 480px;
   }
   .container main .big-card .card-three {
     display: flex;
     align-items: baseline;
     justify-content: baseline;
-    width: 100%;
+    width: 480px;
   }
   .container main section {
-    width: 100%;
+    width: 480px;
     margin-top: 1180px;
     display: flex;
     align-items: center;
     justify-content: center;
   }
   .container main section .cards {
-    width: 100%;
+    width: 480px;
     flex-direction: column;
     gap: 40px;
     display: flex;
@@ -763,12 +760,12 @@
     justify-content: center;
     height: 1850px;
     padding: 15px 0px;
-    width: 100%;
+    width: 480px;
     background-color: black;
     gap: 100px;
   }
   .container footer nav .cards {
-    width: 100%;
+    width: 480px;
     flex-direction: column;
     margin-top: -1050px;
     height: 1560px;
@@ -778,17 +775,17 @@
     transform: scale(102%);
   }
   .container footer nav .cards .cards100 {
-    width: 100%;
+    width: 480px;
     display: flex;
     align-items: center;
     justify-content: center;
   }
   .container footer nav .cards .cards100 img {
-    width: 100%;
+    width: 480px;
     border-radius: 0px 0px 0px 0px;
   }
   .container footer nav .cards .card-two {
-    width: 100%;
+    width: 480px;
     padding: 0px 0px;
     display: flex;
     flex-direction: column;
@@ -810,7 +807,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 480px;
     padding: 0px 0px;
     background-color: black;
   }
@@ -824,7 +821,7 @@
     gap: 30px;
   }
   .container footer nav .cards-two .card .card-one {
-    width: 100%;
+    width: 480px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -832,7 +829,7 @@
     justify-content: center;
   }
   .container footer nav .cards-two .card .card-two {
-    width: 100%;
+    width: 480px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -840,7 +837,7 @@
     justify-content: center;
   }
   .container footer nav .cards-two .card .card-three {
-    width: 100%;
+    width: 480px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -858,6 +855,7 @@
     height: 200px;
     align-items: center;
     justify-content: center;
+    width: 480px;
   }
   .container footer nav .cards-two .card-100 .card20 {
     height: 15px;
