--- a/sass/style.scss
+++ b/sass/style.scss
@@ -731,18 +731,16 @@
 
 @media(max-width:480px) {
     .container {
-        width: 100%;
-        padding:0px 0px;
         header {
-            width:100%;
+            width:480px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             padding:0px 0px;
             nav {
-                width: 100%;
-                padding: 0px 0px;
+                width:480px;
+                padding: 0px 20px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -753,7 +751,7 @@
             }
 
             section {
-                width: 100%;
+                width:480px;
                 padding: 0px 0px;
                 background-image: none;
                 height: 470px;
@@ -762,7 +760,7 @@
                 justify-content: center;
 
                 .cards {
-                    width: 100%;
+                    width:480px;
                     height: 400px;
                     padding: 30px 30px;
 
@@ -803,7 +801,7 @@
 
         main {
             .big-card {
-                width:100%;
+                width:480px;
                 display: flex;
                 flex-direction: column;
                 align-items: baseline;
@@ -812,13 +810,13 @@
                 margin-bottom: -570px;
 
                 .card-one {
-                    width: 100%;
+                    width:480px;
                     display: flex;
                     align-items: baseline;
                     justify-content: baseline;
 
                     .suz {
-                        width: 100%;
+                        width:480px;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
@@ -843,11 +841,12 @@
                 }
 
                 .card-two {
+                    width: 480px;
                     flex-direction: column;
                     gap: 100px;
 
                     .card {
-                        width: 100%;
+                        width:480px;
                         height: 480px;
                     }
                 }
@@ -856,19 +855,19 @@
                     display: flex;
                     align-items: baseline;
                     justify-content: baseline;
-                    width: 100%;
+                    width:480px;
                 }
             }
 
             section {
-                width:100%;
+                width:480px;
                 margin-top: 1180px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
 
                 .cards {
-                    width: 100%;
+                    width:480px;
                     flex-direction: column;
                     gap: 40px;
                     display: flex;
@@ -894,12 +893,12 @@
                 justify-content: center;
                 height: 1850px;
                 padding:15px 0px;
-                width:100%;
+                width:480px;
                 background-color:black;
                 gap:100px;
 
                 .cards {
-                    width:100%;
+                    width:480px;
                     flex-direction: column;
                     margin-top: -1050px;
                     height: 1560px;
@@ -909,19 +908,19 @@
                     }
 
                     .cards100 {
-                        width:100%;
+                        width:480px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
 
                         img {
-                            width:100%;
+                            width:480px;
                             border-radius: 0px 0px 0px 0px;
                         }
                     }
 
                     .card-two {
-                        width:100%;
+                        width:480px;
                         padding: 0px 0px;
                         display: flex;
                         flex-direction: column;
@@ -952,7 +951,7 @@
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
-                    width:100%;
+                    width:480px;
                     padding:0px 0px;
                     background-color:black;
 
@@ -966,7 +965,7 @@
                         gap: 30px;
 
                         .card-one {
-                            width:100%;
+                            width:480px;
                             text-align: center;
                             display: flex;
                             flex-direction: column;
@@ -975,7 +974,7 @@
                         }
 
                         .card-two {
-                            width:100%;
+                            width:480px;
                             text-align: center;
                             display: flex;
                             flex-direction: column;
@@ -984,7 +983,7 @@
                         }
 
                         .card-three {
-                            width:100%;
+                            width:480px;
                             text-align: center;
                             display: flex;
                             flex-direction: column;
@@ -1006,6 +1005,7 @@
                         height:200px;
                         align-items: center;
                         justify-content: center;
+                        width: 480px;
 
                         .card20 {
                             height:15px;
