--- a/sass/style.scss
+++ b/sass/style.scss
@@ -732,15 +732,16 @@
 @media(max-width:480px) {
     .container {
         header {
-            width:480px;
+            width: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding:0px 0px;
+            padding: 0px 0px;
+
             nav {
-                width:480px;
-                padding: 0px 20px;
+                width: 100%;
+                padding: 0px 0px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -751,16 +752,16 @@
             }
 
             section {
-                width:480px;
+                width: 100%;
                 padding: 0px 0px;
                 background-image: none;
                 height: 470px;
                 display: flex;
-                align-items:center;
+                align-items: center;
                 justify-content: center;
 
                 .cards {
-                    width:480px;
+                    width: 100%;
                     height: 400px;
                     padding: 30px 30px;
 
@@ -801,7 +802,7 @@
 
         main {
             .big-card {
-                width:480px;
+                width: 100%;
                 display: flex;
                 flex-direction: column;
                 align-items: baseline;
@@ -810,13 +811,13 @@
                 margin-bottom: -570px;
 
                 .card-one {
-                    width:480px;
+                    width: 100%;
                     display: flex;
                     align-items: baseline;
                     justify-content: baseline;
 
                     .suz {
-                        width:480px;
+                        width: 100%;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
@@ -841,12 +842,11 @@
                 }
 
                 .card-two {
-                    width: 480px;
                     flex-direction: column;
                     gap: 100px;
 
                     .card {
-                        width:480px;
+                        width: 100%;
                         height: 480px;
                     }
                 }
@@ -855,19 +855,19 @@
                     display: flex;
                     align-items: baseline;
                     justify-content: baseline;
-                    width:480px;
+                    width: 100%;
                 }
             }
 
             section {
-                width:480px;
+                width: 100%;
                 margin-top: 1180px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
 
                 .cards {
-                    width:480px;
+                    width: 100%;
                     flex-direction: column;
                     gap: 40px;
                     display: flex;
@@ -887,40 +887,41 @@
             }
 
             nav {
-                margin-top:600px;
+                margin-top: 600px;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
                 height: 1850px;
-                padding:15px 0px;
-                width:480px;
-                background-color:black;
-                gap:100px;
+                padding: 15px 0px;
+                width: 100%;
+                background-color: black;
+                gap: 100px;
 
                 .cards {
-                    width:480px;
+                    width: 100%;
                     flex-direction: column;
                     margin-top: -1050px;
                     height: 1560px;
-                    transition:2s;
-                    &:hover{
-                        transform:scale(102%);
+                    transition: 2s;
+
+                    &:hover {
+                        transform: scale(102%);
                     }
 
                     .cards100 {
-                        width:480px;
+                        width: 100%;
                         display: flex;
                         align-items: center;
                         justify-content: center;
 
                         img {
-                            width:480px;
+                            width: 100%;
                             border-radius: 0px 0px 0px 0px;
                         }
                     }
 
                     .card-two {
-                        width:480px;
+                        width: 100%;
                         padding: 0px 0px;
                         display: flex;
                         flex-direction: column;
@@ -951,9 +952,9 @@
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
-                    width:480px;
-                    padding:0px 0px;
-                    background-color:black;
+                    width: 100%;
+                    padding: 0px 0px;
+                    background-color: black;
 
                     .card {
                         display: flex;
@@ -965,7 +966,7 @@
                         gap: 30px;
 
                         .card-one {
-                            width:480px;
+                            width: 100%;
                             text-align: center;
                             display: flex;
                             flex-direction: column;
@@ -974,7 +975,7 @@
                         }
 
                         .card-two {
-                            width:480px;
+                            width: 100%;
                             text-align: center;
                             display: flex;
                             flex-direction: column;
@@ -983,15 +984,16 @@
                         }
 
                         .card-three {
-                            width:480px;
+                            width: 100%;
                             text-align: center;
                             display: flex;
                             flex-direction: column;
                             align-items: center;
                             justify-content: center;
-                            ul{
-                                #li{
-                                    color:white;
+
+                            ul {
+                                #li {
+                                    color: white;
                                     text-decoration: none;
                                     list-style: none;
                                 }
@@ -1001,14 +1003,13 @@
 
                     .card-100 {
                         flex-direction: column;
-                        margin-bottom:50px;
-                        height:200px;
+                        margin-bottom: 50px;
+                        height: 200px;
                         align-items: center;
                         justify-content: center;
-                        width: 480px;
 
                         .card20 {
-                            height:15px;
+                            height: 15px;
                         }
                     }
                 }
